# scala-llvm

./: README.md  build.sbt  llvm-c.h
src/main/cpp/: CMakeLists.txt  llvm_tools.cpp  llvm_tools.h
src/main/scala/org/llvm/: BasicBlock.scala  Builder.scala  CompiledFunction.scala  Context.scala  Disposable.scala  Engine.scala  Function.scala  LLVMObjectWrapper.scala  Module.scala  Type.scala  Value.scala  api.scala  package.scala
src/test/scala/org/llvm/: BuilderTest.scala  ContextTest.scala  EngineTest.scala  ExecutionTest.scala  ModuleTest.scala
